15521
import aaa.bbb.`package`._  works for scalac,
but for repl it doesn't
```scala
Welcome to Scala version 2.8.0.RC7 (Java HotSpot(TM) 64-Bit Server VM, Java 1.6.0_17).
Type in expressions to have them evaluated.
Type :help for more information.

scala> import scala.`package`._
import scala.package._
<console>:5: error: identifier expected but 'package' found.
import scala.package._
             ^
```
